<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image_one_signin"
    tools:context=".resendCodeVerificationActivity">


    <TextView
        android:id="@+id/japrof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="Ja L'prof"
        android:textColor="@color/purple_200"
        android:textSize="40dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/japrof"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/graywithborder"
        android:hint="Email"
        android:padding="20dp"
        android:shadowColor="@color/gray"
        android:textColorHint="@color/gray" />

    <Button
        android:id="@+id/sendVerificationCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/graywithborder"
        android:backgroundTint="@color/gray"
        android:clickable="true"

        android:padding="20dp"
        android:text="@string/Send_verification_code"
        android:textColor="@color/white"
        app:backgroundTint="@color/gray" />

    <Button
        android:id="@+id/checkmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sendVerificationCode"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/graywithborder"
        android:backgroundTint="@color/gray"
        android:clickable="true"
        android:padding="20dp"
        android:text="@string/check_mail"
        android:textColor="@color/white"
        app:backgroundTint="@color/gray" />

    <TextView
        android:id="@+id/resendcode"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkmail"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/resend_code"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="170dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="117dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="123dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="-3dp"
        android:clickable="true"
        android:onClick="SignIN"
        android:cursorVisible="false"
        android:gravity="center"
        android:text="@string/signin_u"
        android:textColor="@color/gray" />

</RelativeLayout>