<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image_one_signin"
    tools:context=".loginActivity">

    <TextView
        android:id="@+id/japrof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="Ja L'prof"
        android:textColor="@color/purple_200"
        android:textSize="40dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/japrof"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="254dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/graywithborder"
        android:hint="login"
        android:padding="20dp"
        android:shadowColor="@color/gray"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/graywithborder"
        android:hint="password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="@color/gray" />

    <Button
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/graywithborder"
        android:backgroundTint="@color/gray"
        android:clickable="true"
        android:onClick="SignIN"
        android:padding="20dp"
        android:text="@string/signin"
        android:textColor="@color/white"
        app:backgroundTint="@color/gray" />


    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="90dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="133dp"
        android:clickable="true"
        android:onClick="ForgetPassword"


        android:text="@string/forgotpassword"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/notmember"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="111dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="113dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="87dp"
        android:clickable="true"
        android:onClick="SignUP"
        android:text="@string/notmember"
        android:textColor="@color/gray" />


</RelativeLayout>